# Hybrid-process-analytics-memory-orchestrator

./: .gitignore  CMakeLists.txt  DetailedExplanationCode.md  Makefile  Makefile.Debug  Makefile.Release  README.md  analyzer.h  analyzer_cli  analyzer_gui  analyzer_gui.pro  build_and_run.bat  codeExplanation.md  data_structures.h  data_structures_documentation.md  graph_generator.py  i_process_collector.h  implementation_plan.md  linux_process_collector.h  main.cpp  main_cli.cpp  moc_dashboard_tab.cpp  moc_ds_visualizer.cpp  moc_fault_tab.cpp  moc_mainwindow.cpp  moc_storage_tab.cpp  object_script.analyzer_gui.Debug  phase1_codebase_analysis.md  process_collector.h  projectlog.md  run_analyzer.bat  run_gui.sh  storage_engine.h  test.cpp  test_mingw.cpp  visualizer.h
docs/: NextPlan.md  data_structures_documentation.md  implementation_plan.md  task.md
gui/: dashboard_tab.cpp  ds_visualizer.cpp  fault_tab.cpp  fault_tab.h  mainwindow.cpp  mainwindow.h  storage_tab.cpp  styles.h
include/core/: analyzer.h  fault_monitor.h  i_process_collector.h  storage_engine.h
include/gui/: dashboard_tab.h  ds_visualizer.h  mainwindow.h  storage_tab.h  styles.h
release/: moc_dashboard_tab.cpp  moc_ds_visualizer.cpp  moc_fault_tab.cpp  moc_mainwindow.cpp  moc_storage_tab.cpp  object_script.analyzer_gui.Release
scripts/: graph_generator.py  run_gui.sh
src/core/: main.cpp  main_cli.cpp
src/gui/: dashboard_tab.cpp  mainwindow.cpp
